# OmegaSportsAgent

./: .gitignore  AGENT_INSTRUCTIONS.md  API_INTEGRATION_SUMMARY.md  API_QUICKREF.md  BETTING_STRATEGY_ROADMAP.md  CALIBRATION_AUTOMATION.md  CALIBRATION_INTEGRATION_GUIDE.md  CHANGES_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  DAILY_WORKFLOW_SUMMARY.md  EXECUTION_SUMMARY_2026-01-21.md  GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_EXAMPLES.py  MODULE_EXECUTION_ORDER.md  PERPLEXITY_SETUP.md  QUICKSTART.md  README.md  README_DAILY_WORKFLOW.md  SYSTEM_ARCHITECTURE.md  TASKS_OVERVIEW.md  TASK_2_SUMMARY.md  VALIDATION_LAB_UPDATE.md  alembic.ini  daily_bet_generation.py  daily_bets_executor_2026_01_21.py  demo_api_integration.py  example_autonomous_calibration.py  example_complete_workflow.py  example_markov_simulation.py  execute_daily_bets.py  final_validation.sh  main.py  pyproject.toml  render.yaml  requirements.txt  scraper_engine.py  test_calibration.py  test_calibration_integration.py  (+2 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
agent/: README.md  answer_strategist.py  fact_gatherer.py  intent_understanding.py  llm_client.py  models.py  orchestrator.py  quality_gate.py  requirement_planner.py  response_composer.py
archive/: MODULE_LOAD_ORDER.md
config/: AGENT_SPACE_INSTRUCTIONS.md  CombinedInstructions.md  calibration_loader.py  league_calibrations.yaml  schema_map.json  settings.yaml
docs/: API_KEYS.md  ARCHITECTURE.md  DAILY_GRADING_GUIDE.md  OmegaSportsAgent_V2.1  ingestion.md
examples/: README.md  daily_grading_example.py  (+2 more)
lab/: cli.py  (+18 more)
(+395 files in other folders)
