[project]
name = "omega-sports-engine"
version = "1.0.0"
description = "Headless sports analytics and simulation engine for Perplexity Spaces"
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic>=1.17.2",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0,<6.0.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.31.0,<2.32.3",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "crawl4ai>=0.4.0",
    "playwright>=1.40.0",
]
