[project]
name = "omega-sports-engine"
version = "2.0.0"
description = "Sports analytics and simulation engine"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0,<6.0.0",
    "requests>=2.31.0",
]
